--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-validator": "^6.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.13",
+    "mongoose-deep-populate": "^3.1.1",
     "mongoose-unique-validator": "^2.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
