--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "mongoose": "^5.9.13",
     "mongoose-deep-populate": "^3.1.1",
     "mongoose-unique-validator": "^2.0.3",
+    "multer": "^1.4.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "uuid": "^8.1.0"
   },
   "scripts": {
     "start": "node server.js",
