--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "boulder-services",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mountainguy76935.github.io/free-connect-frontend/",
+  "homepage": "https://free-connect.github.io/free-connect-frontend/",
   "dependencies": {
     "@material-ui/core": "^4.10.2",
     "@testing-library/jest-dom": "^4.2.4",
