--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "save": "^2.4.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
